--- a/Fanli-Source-master/index.html
+++ b/Fanli-Source-master/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <title>Hello APP</title>
+    <title>Hello APP 好的appp</title>
     <link rel="stylesheet" type="text/css" href="./css/api.css" />
     <link rel="stylesheet" type="text/css" href="./css/common.css" />
     <style>
@@ -59,7 +59,6 @@
                         <i class="icon-search"></i>
                         <span class="search-fake-input">
                             输入关键词，搜索拿返利
-                            <!-- 啦啦啦啦啦啦啦啦啦啦啦啦 -->
                         </span>
                     </div>
                 </div>
